--- a/templates/auth/signup.html
+++ b/templates/auth/signup.html
@@ -39,7 +39,7 @@
                     {% endif %}
 
                     <!-- Signup Form -->
-                    <form action="{{ url_for('auth.register') }}" method="POST" class="mt-4" id="signupForm">
+                    <form id="signupForm" action="/auth/signup" method="post" class="mt-4">
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-floating mb-3">
@@ -90,14 +90,14 @@
 
                     <div class="text-center mt-4">
                         <p class="mb-0">Already have an account? 
-                            <a href="{{ url_for('auth.login') }}" class="text-success text-decoration-none fw-bold">
+                            <a href="/auth/login" class="text-success text-decoration-none fw-bold">
                                 Sign in here
                             </a>
                         </p>
                     </div>
                 </div>
                 <div class="card-footer text-center py-3 bg-light">
-                    <a href="{{ url_for('tournament.index') }}" class="text-decoration-none">
+                    <a href="/tournament/" class="text-decoration-none">
                         <i class="fas fa-arrow-left me-1"></i> Back to Home
                     </a>
                 </div>
