--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="{{ url_for('tournament.index') }}">
+            <a class="navbar-brand" href="/tournament/">
                 <i class="fas fa-chess-knight me-2"></i>Chess Tournament Manager
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -25,13 +25,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('tournament.index') }}">
+                        <a class="nav-link" href="/tournament/">
                             <i class="fas fa-trophy me-1"></i> Tournaments
                         </a>
                     </li>
                     {% if session.get('name') %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('tournament.create') }}">
+                        <a class="nav-link" href="/tournament/create">
                             <i class="fas fa-plus-circle me-1"></i> New Tournament
                         </a>
                     </li>
@@ -46,17 +46,17 @@
                         <ul class="dropdown-menu dropdown-menu-end">
                             <li><a class="dropdown-item" href="#"><i class="fas fa-user-cog me-2"></i>Profile</a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="{{ url_for('auth.logout') }}"><i class="fas fa-sign-out-alt me-2"></i>Logout</a></li>
+                            <li><a class="dropdown-item" href="/auth/logout"><i class="fas fa-sign-out-alt me-2"></i>Logout</a></li>
                         </ul>
                     </li>
                     {% else %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('auth.login') }}">
+                        <a class="nav-link" href="/auth/login">
                             <i class="fas fa-sign-in-alt me-1"></i> Login
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('auth.register') }}">
+                        <a class="nav-link" href="/auth/signup">
                             <i class="fas fa-user-plus me-1"></i> Register
                         </a>
                     </li>
