--- a/templates/auth/signup.html
+++ b/templates/auth/signup.html
@@ -49,7 +49,7 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="form-floating mb-3">
-                                    <input type="email" class="form-control" id="emailaddress" name="emailaddress" placeholder="Email Address" required>
+                                    <input type="email" class="form-control" id="email" name="email" placeholder="Email Address" required>
                                     <label for="emailaddress"><i class="fas fa-envelope me-2"></i>Email</label>
                                 </div>
                             </div>
@@ -70,7 +70,7 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="form-floating mb-4">
-                                    <input type="password" class="form-control" id="confirmPassword" name="confirm_password" placeholder="Confirm Password" required>
+                                    <input type="password" class="form-control" id="confirmPassword" name="confirmpassword" placeholder="Confirm Password" required>
                                     <label for="confirmPassword"><i class="fas fa-lock me-2"></i>Confirm Password</label>
                                 </div>
                             </div>
