--- a/templates/tournament/pairings.html
+++ b/templates/tournament/pairings.html
@@ -12,7 +12,13 @@
             </ol>
         </nav>
         <h1 class="h3 mb-0">
-            <i class="fas fa-chess-board me-2"></i>Round {{ current_round.round_number }} Pairings
+            <i class="fas fa-chess-board me-2"></i>
+            {% if current_round %}
+                Round {{ current_round.round_number }}
+            {% else %}
+                No Active Round
+            {% endif %}
+            Pairings
         </h1>
     </div>
     <div>
