--- a/templates/tournament/view.html
+++ b/templates/tournament/view.html
@@ -14,8 +14,11 @@
         <a href="{{ url_for('tournament.manage_players', tournament_id=tournament.id) }}" class="btn btn-outline-primary me-2">
             <i class="fas fa-users me-1"></i> Manage Players
         </a>
-        <a href="{{ url_for('tournament.manage_pairings', tournament_id=tournament.id) }}" class="btn btn-primary">
+        <a href="{{ url_for('tournament.manage_pairings', tournament_id=tournament.id) }}" class="btn btn-primary me-2">
             <i class="fas fa-chess-board me-1"></i> Manage Pairings
+        </a>
+        <a href="{{ url_for('tournament.manage_byes', tournament_id=tournament.id) }}" class="btn btn-outline-info">
+            <i class="fas fa-user-clock me-1"></i> Manage Byes
         </a>
     </div>
 </div>
